--- a/Testes.Dominio/Testes.Dominio.csproj
+++ b/Testes.Dominio/Testes.Dominio.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.0.1" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
   </ItemGroup>
 
 </Project>
